[metadata]
name = reddit_multi
url = https://github.com/nymann/reddit-multi
maintainer = Kristian Nymann Jakobsen
version = 0.0.1
maintainer_email = kristian@nymann.dev
description = Reddit Multi
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
package_dir = = src
python_requires = >= 3.9
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-dotenv
    pytest-cov
    pytest-xdist
    approvaltests
    pytest-approvaltests
install_requires =
    typer
    pydantic
    praw

[options.extras_require]
dev =
    isort
    wemake-python-styleguide
    mypy
    black
    dlint
    nitpick
    cohesion
    pyformat
    add-trailing-comma
    pre-commit
    devtools[pygments]

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    reddit_multi = reddit_multi.main:app

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"

[tool:pytest]
testpaths = tests
addopts =
    --color=yes
    --cov-report=xml
    --cov-report=html
    --cov=src
    --cov-report=term-missing
    --approvaltests-use-reporter=PythonNative

[coverage:run]
branch = True
source =
    src
    tests

[coverage:paths]
source =
    src

[aliases]
test=pytest

[pydocstyle]
convention=google

[flake8]
format = wemake
show-source = True
ignore = D107,D202,D203,D401,E203,E402,E501,W503,S101,H601,WPS115
inline-quotes = double
max-line-length = 120

[mypy-tests.*]
ignore_errors = True

[mypy]
follow_imports = skip
ignore_missing_imports = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True

[isort]
lexicographical = True
force_sort_within_sections = True
force_single_line = True
src_paths=src,tests
single_line_exclusions = typing
known_first_party = reddit_multi,tests
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
line_length = 120
multi_line_output = 3
